--- a/client/src/app/image-style-card/image-style-card.component.html
+++ b/client/src/app/image-style-card/image-style-card.component.html
@@ -11,7 +11,7 @@
       <fa name="save" (click)="imageStyle.toggleProperty('editNameMode')"></fa>
     </div>
 
-    <a *ngIf="!imageStyle.isDefault" (click)="this.data.deleteStyle(imageStyle)">
+    <a *ngIf="!imageStyle.isDefault" (click)="this.styler.deleteStyle(imageStyle)">
       <fa name="trash"></fa>
     </a>
   </div>
