--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,31 +1,2 @@
-<div id="app-container" #appContainer class="grayAccent01">
-
-  
-  <div id="toolbar" #toolbar>
-  <toolbar></toolbar>
-  </div>
-
-  <div id="toolbar-secondary">
-  <toolbar-secondary ></toolbar-secondary>
-  </div>
-
-  <div id="styler" #styler>
-  <styler></styler>
-  </div>
-
-  <div id="sandbox" #sandbox>
-  <sandbox></sandbox>
-  </div>
-
-  <div id="resizer" #resizer></div>
-  
-  <div id="slide-editor" #slideEditor>
-  <slide-editor></slide-editor>
-</div>
-
-</div>
+<router-outlet></router-outlet>
 <app-dialog></app-dialog>
-
-
-
-
