--- a/client/src/app/sandbox/sandbox.component.html
+++ b/client/src/app/sandbox/sandbox.component.html
@@ -1,38 +1,38 @@
 <!-- Text sandbox -->
-<div #container id="sandbox-container" class="grayAccent03" *ngIf="this.data.currentProject">
-  <div class="flex-col-evenly sandbox-preview-area accent05" *ngIf="this.data.viewTextElements">
+<div #container id="sandbox-container" class="grayAccent03">
+  <div class="flex-col-evenly sandbox-preview-area accent05" *ngIf="viewTextElements">
     <div id="text-preview-container">
-      <p [ngStyle]="this.data.getTextStyleById(this.data.selectedTextStyleId).getCss()">{{this.data.sandboxText}}</p>
+      <p [ngStyle]="selectedTextStyle.getCss()">{{sandboxText}}</p>
     </div>
   </div>
 
-  <div class="flex-col-evenly sandbox-preview-area accent05" *ngIf="this.data.viewImageElements">
-    <img id="image-preview" *ngIf="this.data.images[this.data.selectedImage]" [src]="this.data.images[this.data.selectedImage].url"
-      [ngStyle]="this.data.getImageStyleById(this.data.selectedImageStyleId).getCss()">
+  <div class="flex-col-evenly sandbox-preview-area accent05" *ngIf="viewImageElements">
+    <img id="image-preview" *ngIf="selectedImage" [src]="selectedImage.url"
+      [ngStyle]="selectedImageStyle.getCss()">
   </div>
 
   <div #resizer id="sandbox-resizer">
 
   </div>
 
-  <div id="text-input-container" *ngIf="this.data.viewTextElements">
+  <div id="text-input-container" *ngIf="viewTextElements">
     <div #middlebar id="text-middle-bar">
-      <textarea id="sandbox-textarea" [(ngModel)]="this.data.sandboxText">
+      <textarea id="sandbox-textarea" [(ngModel)]="sandboxText">
 
     </textarea>
 
-      <a (click)="this.sandbox.addTextObjectToSlide()" class="sandbox-add-btn-group grayAccent02 flex-col-evenly">
+      <a (click)="this.sandbox.addToSlide('textObject')" class="sandbox-add-btn-group grayAccent02 flex-col-evenly">
         <fa name="share"></fa>
         <p>Add text object <br> to slide</p>
       </a>
     </div>
 
-    <textarea id="notes-textarea" [(ngModel)]="this.data.textNotes">
+    <textarea id="notes-textarea" [(ngModel)]="textNotes">
     {{this.data.textNotes}}
   </textarea>
   </div>
 
-  <div id="image-input-container" *ngIf="this.data.viewImageElements">
+  <div id="image-input-container" *ngIf="viewImageElements">
     <div #middlebar id="image-middle-bar" class="flex-row-between">
       <div class="flex-col-evenly" id="import-container">
         <p>Import an image:</p>
@@ -56,15 +56,15 @@
           <img id="pixabay-logo" src="https://pixabay.com/static/img/logo.svg" (click)="this.showSearchResults()">
         </div>
 
-      <a (click)="this.sandbox.addImageObjectToSlide()" class="sandbox-add-btn-group grayAccent02 flex-col-evenly">
+      <a (click)="this.sandbox.addToSlide('imageObject')" class="sandbox-add-btn-group grayAccent02 flex-col-evenly">
         <fa name="share"></fa>
         <p>Add image object to slide</p>
       </a>
     </div>
 
     <div *ngIf="this.isGalleryMode" id="gallery">
-      <div *ngFor="let image of this.data.images" class="gallery-img-container">
-        <img src="{{image.url}}" (click)="this.sandbox.selectImage(image.id)" class="clickable gallery-img">
+      <div *ngFor="let image of images" class="gallery-img-container">
+        <img src="{{image.url}}" (click)="this.sandbox.selectImage(image)" class="clickable gallery-img">
         <fa name="trash" class="delete-icon flex-row-evenly" (click)="this.sandbox.deleteImageById(image.id)"></fa>
       </div>
     </div>
