--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -54,14 +54,19 @@
 /* Dashboard PROJECTS view */
 #create-project-btn {
     width: 300px;
-    height: 50px;
+    min-height: 50px;
     font-size: 1.2rem;
     text-align: center;
+    position: relative;
 }
 
 #projects-container {
-    max-width: 80%;
+    width: 90%;
     margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
 
@@ -70,7 +75,7 @@
     height: auto;
     margin: 20px;
     padding: 20px;
-    box-shadow: 1px 1px 5px rgb(117, 117, 117);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
 .project-card img {
