--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -1,4 +1,41 @@
-#sandbox-container {
+.sandbox-container  {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 500px 10px 1fr;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.preview-area {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom right, rgb(179, 179, 179), rgb(241, 241, 241));
+}
+
+.resizer {
+    height: 10px;
+    width: 100%;
+    background: gray;
+    cursor: row-resize
+}
+
+.middle-bar {
+    width: 100%;
+    height: 100px;
+    background: rgb(65, 65, 65);
+}
+
+.sandbox-bottom {
+    width: 100%;
+    height: 100%;
+    background: rgb(235, 235, 235);
+}
+
+/* #sandbox-container {
     width: 100%;
     height: 100%;
     display: grid;
@@ -82,7 +119,7 @@
     border-top: 3px rgb(65, 65, 65) solid;
     border-bottom: 3px rgb(65, 65, 65) solid;
     width: 100%;
-    height: 75px;
+    height: 100px;
     position: relative;
     display: grid;
     grid-template-columns: 1fr 100px;
@@ -285,5 +322,5 @@ input[type="file"] {
     .sandbox-add-btn-group p {
        font-size: 0.8rem;
     } */
-  }
+ 
 
