--- a/client/src/app/text-sandbox/text-sandbox.component.html
+++ b/client/src/app/text-sandbox/text-sandbox.component.html
@@ -12,7 +12,7 @@
         <textarea id="main-textarea" [(ngModel)]="sandboxText"></textarea>
         <a (click)="this.sandbox.addToSlide('textObject')" id="sandbox-add-btn-group" class="grayAccent02 flex-col-center">
             <fa name="share"></fa>
-            <p>Add text object <br> to slide</p>
+            <p>Add text object to slide</p>
           </a>
       </div>
       
