--- a/client/src/app/image-sandbox/image-sandbox.component.css
+++ b/client/src/app/image-sandbox/image-sandbox.component.css
@@ -69,10 +69,17 @@
     box-sizing: border-box;
 }
 
-#image-preview {
+
+
+#image-preview-container {
     max-width: 90%;
     max-height: 90%;
-    min-width: 100px;
+    min-width: 200px;
+}
+
+#image-preview {
+    width: 100%;
+    height: auto;
 }
 
 /* Middle bar  */
@@ -150,7 +157,10 @@
 #sandbox-add-btn-group p {
     font-size: 0.7rem;
     text-align: center;
-    margin: 3px auto;
+    margin: 3px 2px;
+    word-wrap: break-word;
+    box-sizing: border-box;
+    max-width: 90%;
 }
 
 #menu-tab-container {
@@ -183,7 +193,7 @@
 .gallery {
     margin: 0 auto;
     padding: 5px;
-    border: 0;
+    border-top: 7px solid rgb(233, 233, 233);
     width: 100%;
     height: 100%;
     font-size: 1rem;
