--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -5,7 +5,7 @@ body, html{
     font-family: 'Helvetica', sans-serif;
     overflow: visible;
     user-select: none;
-    outline: 0;
+    outline: none;
     overflow: hidden;
 }
 
@@ -158,6 +158,7 @@ button:hover
 .loader {
     animation: rotate linear 1s infinite;
     font-size: 1rem;
+    transform-origin: 50% 50%;
 }
 
 @keyframes rotate {
