--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -3,7 +3,7 @@
     height: 100%;
     min-width: 375px;
     display: grid;
-    grid-template-rows: 500px 10px 1fr;
+    grid-template-rows: 1fr 10px 1fr;
     grid-template-areas:
         "render"
         "editorResizer"
