--- a/client/src/app/text-sandbox/text-sandbox.component.css
+++ b/client/src/app/text-sandbox/text-sandbox.component.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-rows: 500px 10px 1fr;
+    grid-template-rows: 1fr 10px 1fr;
     grid-template-areas:
         "previewArea"
         "resizer"
