--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,10 +3,15 @@
   <div id="home-content-container">
     <div id="home-left-content" class="flex-col-start">
 
-      <h1 id="app-brand">Name of App</h1>
-      <p id="description">Description here. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
-        beatae omnis. Nobis ad
-        exercitationem ex officiis eius. Commodi, obcaecati omnis...</p>
+      <h1 id="app-brand">Name Here</h1>
+      <p>Produce beautiful creative content right in your web browser.  No installations required!</p>
+      <ul id="description-list">
+        <li><fa name="check"></fa>Create presentation slideshows</li>
+        <li><fa name="check"></fa>Web design templates</li>
+        <li><fa name="check"></fa>Generate PDF Documents</li>
+        <li><fa name="check"></fa>Image editing</li>
+        <li><fa name="check"></fa>Google Fonts library and Pixabay image search, all in one place.</li>
+      </ul>
 
       <button routerLink="main" class="cta-btn">Use as guest</button>
       <img id="splash" src="../../assets/splash.jpg">
