--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -85,10 +85,15 @@
     margin: 10px auto 5px auto;
 }
 
-.project-card img {
-    width: auto;
+.project-card-img-container{
+    width: 175px;
     height: 100px;
     margin: 5px auto;
+}
+
+.project-card img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .project-card p {
