Updated splash image on home component.  Added comments throughout code.

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -7,14 +7,18 @@
       <p>Produce beautiful creative content right in your web browser.  No installations required!</p>
       <ul id="description-list">
         <li><fa name="check"></fa>Create presentation slideshows</li>
-        <li><fa name="check"></fa>Web design templates</li>
+        <li><fa name="check"></fa>Draft web design templates</li>
         <li><fa name="check"></fa>Generate PDF Documents</li>
         <li><fa name="check"></fa>Image editing</li>
         <li><fa name="check"></fa>Google Fonts library and Pixabay image search, all in one place.</li>
       </ul>
 
       <button routerLink="main" class="cta-btn">Use as guest</button>
+
+      <img id="splash" src="../../assets/splash.jpg">
     </div>
+
+    
 
     <div id="home-right-content" class="flex-col-start">
       <div class="app-theme" id="forms-container">
