--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -9,9 +9,10 @@
 #home-content-container {
     width: 80%;
     max-width: 1200px;
-    height: 650px;
+    height: auto;
     display: grid;
-    padding: 100px 0;
+    padding: 150px 0;
+    margin-top: 100px;
     grid-template-columns: 70% 30%;
     grid-template-areas: "left right";
 }
@@ -31,8 +32,8 @@
 }
 
 #splash {
-    box-shadow: 2px 2px 5px rgb(122, 122, 122),
-    -1px -1px 3px rgb(122, 122, 122);
+    box-shadow: 0px 0px 10px rgba(59, 59, 59, 0.4);
+    border: 1px rgba(54, 54, 54, 0.5) solid;
 }
 
 #description-list li {
